# toolkit-demo-paper

./: .gitignore  LICENSE.md  README.md  R_setup.R  Radar_graphical_abstract.qmd  _quarto-singlefile.yml  _quarto.yml  component_table.csv  default_word_template.docx  demo_paper.qmd  full_toolkit.qmd  index.qmd  just_supplement.qmd  project_setup.bat  pyproject.toml  references.bib  tabletest.docx  toolkit-demo-paper.Rproj  two_bibs_test.qmd  two_bibs_test.typ
OLD_IMAGES/: CONCEPTUAL README.txt
presentation_paper/: 0_make_causal_network.qmd  component_table.csv  demo_paper.docx  demo_paper.html  demo_paper.qmd  demo_paper.tex  demo_paper2.qmd  full_toolkit.qmd  references.bib  rendertest.qmd  tabletest.qmd
