[tool.poetry]
name = "werp-toolkit"
version = "0.1.0"
description = ""
authors = ["Galen Holt <53928785+galenholt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "HydroBOT"}]

[tool.poetry.dependencies]
python = "^3.11"
py-ewr = "^2.2.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
