[tool.poetry]
name = "hydrobot-template"
version = "0.1.0"
description = ""
authors = ["Galen Holt <53928785+galenholt@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
py-ewr = "^2.3.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
